:pencil: 아이콘 두 개인 오류 수정

--- a/.gitmessage.md
+++ b/.gitmessage.md
@@ -8,32 +8,32 @@
 
 이모지|설명
 :-|:-
-🎉 :tada:|초기 커밋, 브랜치 새로 땄는데 뭐라할지 모르겠을 때
-🔖 :bookmark:|버전 태그
-🐛 :bug:|버그픽스
-✨ :sparkles:|새로운 기능
-📚 :books:|선적 서류 비치, 읽을만한 파일을 올려놨을 때
-💡 :bulb:|소스 코드 문서화
-🎨 :art:|형식/구조 개선
-🔨 :hammer:|코드 리팩터링
-🔥 :fire:|코드/파일 제거
-📝 :pencil:|텍스트
-🚑 :ambulance:|중요한 핫픽스
-🚀 :rocket:|물건 배포
-🚧 :construction:|진행중인 작업
-➖ :heavy_minus_sign:|종속성 제거
-➕ :heavy_plus_sign:|종속성 추가
-🔀 :twisted_rightwards_arrows:|분기 병합
-💩 :hankey:|잘못된 코드/개선이 필요합니다, 급하게 짠 경우
-⏪ :rewind:|변경사항 되돌리기
-💥 :boom:|주요 변경 사항
-👌 :ok_hand:|코드 검토 변경 사항, pr에서 지적받은 사항 수정
-🚚 :truck:|저장소 이동/이름 바꾸기, 원래 있던 폴더나 파일을 다른 경로로 이동
-⚡ :zap:|일반 업데이트
-🔧 :wrench:|구성 파일
-📦 :package:|JS의 Package.json
-💚 :green_heart:|지속적인 통합
-🔒 :lock:|보안
-⬆️ :arrow_up:|종속성 업그레이드
-⬇️ :arrow_down:|종속성 다운그레이드
-👽 :alien:|번역
+:tada:|초기 커밋, 브랜치 새로 땄는데 뭐라할지 모르겠을 때
+:bookmark:|버전 태그
+:bug:|버그픽스
+:sparkles:|새로운 기능
+:books:|선적 서류 비치, 읽을만한 파일을 올려놨을 때
+:bulb:|소스 코드 문서화
+:art:|형식/구조 개선
+:hammer:|코드 리팩터링
+:fire:|코드/파일 제거
+:pencil:|텍스트
+:ambulance:|중요한 핫픽스
+:rocket:|물건 배포
+:construction:|진행중인 작업
+:heavy_minus_sign:|종속성 제거
+:heavy_plus_sign:|종속성 추가
+:twisted_rightwards_arrows:|분기 병합
+:hankey:|잘못된 코드/개선이 필요합니다, 급하게 짠 경우
+:rewind:|변경사항 되돌리기
+:boom:|주요 변경 사항
+:ok_hand:|코드 검토 변경 사항, pr에서 지적받은 사항 수정
+:truck:|저장소 이동/이름 바꾸기, 원래 있던 폴더나 파일을 다른 경로로 이동
+:zap:|일반 업데이트
+:wrench:|구성 파일
+:package:|JS의 Package.json
+:green_heart:|지속적인 통합
+:lock:|보안
+:arrow_up:|종속성 업그레이드
+:arrow_down:|종속성 다운그레이드
+:alien:|번역
